<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">El 3taba - العتبة</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="welcome">Welcome</string>
    <string name="bag">Bag</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="shop">Shop</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="logo_background">Logo Background</string>
    <string name="corner_logo">Corner Logo</string>
    <string name="hide_password">hide password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="splash_icon_desc">Logo</string>
    <string name="submit">Submit</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="must_be_at_least_8_characters">Must be at least 8 characters</string>
    <string name="set_a_new_password">Set a new password</string>
    <string name="or_signup_with">Or signup with</string>
    <string name="don_t_have_an_account">"Don’t have an account? "</string>
    <string name="sign_in">Sign in</string>
    <string name="have_an_account">"Have an account? "</string>
    <string name="send">Send</string>
    <string name="password_sent_to_you">Password Sent to you</string>
    <string name="seller">Seller</string>
    <string name="customer">Customer</string>
    <string name="or">Or</string>
    <string name="category_image">Category Image</string>
    <string name="back_button">Back Button</string>
    <string name="my_products">My Products</string>
    <string name="add_product">Add Product</string>
    <string name="rating_and_reviews">Rating and reviews</string>
    <string name="additional_specifications">Additional specifications</string>
    <string name="put_it_in_the_bag">Put it in the bag</string>
    <string name="search_icon">Search icon</string>
    <string name="sort_icon">Sort icon</string>
    <string name="add_to_fav_button">Add to fav button</string>
    <string name="five_stars">"★★★★★"</string>
    <string name="four_stars">"★★★★"</string>
    <string name="three_stars">"★★★"</string>
    <string name="two_stars">"★★"</string>
    <string name="one_star">"★"</string>
    <string name="rating_reviews"><![CDATA[Rating & Reviews]]></string>
    <string name="write_a_review">Write a Review</string>
    <string name="what_is_your_rate">What is your rate?</string>
    <string name="please_share_your_opinion_about_the_product">Please share your opinion about the product</string>
    <string name="your_review">Your review</string>
    <string name="send_review">Send Review</string>
    <string name="product_name">Product Name</string>
    <string name="product_image">Product Image</string>
    <string name="_100">$100</string>
    <string name="recommended">Recommended</string>
    <string name="New">New</string>
    <string name="app_logo">app_logo</string>

    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_microsoft">Sign in with Microsoft</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="clien_id" tools:ignore="TypographyDashes">532709606045-js19nh1dc8q63497i1evrkclso70etcb.apps.googleusercontent.com</string>
    <string name="profile_image">Profile image</string>
    <string name="my_orders">My orders</string>
    <string name="shipping_addresses">Shipping addresses</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact us</string>
    <string name="notifications_password">Notifications, password</string>
    <string name="send_us_a_message_if_you_have_a_problem">Send us a message if you have a problem</string>
    <string name="delivered">Delivered</string>
    <string name="cancelled">Cancelled</string>
    <string name="processing">Processing</string>
    <string name="details">Details</string>
    <string name="categories">Categories</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="personal_information">Personal Information</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="sales">Sales</string>
    <string name="new_arrivals">New arrivals</string>
    <string name="delivery_status_changes">Delivery status changes</string>
    <string name="notifications">Notifications</string>
    <string name="full_name">Full Name</string>
    <string name="change">Change</string>
    <string name="contact_number">Contact number</string>
    <string name="your_message">Your message</string>
    <string name="separator">", "</string>
    <string name="filters">Filters</string>
    <string name="price_lowest_to_high">Price: lowest to high</string>
    <string name="color_blue_size_l">Color: Blue, Size: L</string>
    <string name="_10">10$</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="check_out">CHECK OUT</string>
    <string name="total_amount">Total amount:</string>
    <string name="my_bag">My Bag</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="delete_from_the_list">Delete from the list</string>
    <string name="decrease_quantity">Decrease quantity</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="more_options">More options</string>
    <string name="_1">1</string>

</resources>