<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/customer_navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/customer_navigation_shop"
        android:icon="@drawable/ic_shop"
        android:title="@string/shop" />

    <item
        android:id="@+id/customer_navigation_bag"
        android:icon="@drawable/ic_bag"
        android:title="@string/bag" />

    <item
        android:id="@+id/customer_navigation_favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites" />

    <item
        android:id="@+id/customer_navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>
