<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation3"
    app:startDestination="@+id/admin_navigation_home">

    <fragment
        android:id="@+id/admin_navigation_home"
        android:name="com.example.el3taba.admin.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/admin_fragment_home" />

    <fragment
        android:id="@+id/admin_navigation_dashboard"
        android:name="com.example.el3taba.admin.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/admin_fragment_dashboard" />

    <fragment
        android:id="@+id/admin_navigation_notifications"
        android:name="com.example.el3taba.admin.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/admin_fragment_notifications" />
</navigation>