<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <RadioGroup
        android:id="@+id/roleRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/customerRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_customer"
            android:text="@string/customer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/or"
            android:textColor="@android:color/darker_gray" />

        <RadioButton
            android:id="@+id/sellerRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_seller"
            android:text="@string/seller" />

    </RadioGroup>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/SignupButton"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="85"
        android:background="@drawable/auth_button"
        android:text="@string/signup"
        app:backgroundTint="@null" />

</LinearLayout>
