<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/app_logo"
            android:contentDescription="@string/product_image" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/product_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color_blue_size_l"
            android:textSize="12sp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:textSize="12sp"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginTop="4dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
