<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/sellerSplashScreen">

    <fragment
        android:id="@+id/sellerSplashScreen"
        android:name="com.example.el3taba.auth.WelcomeFragment"
        android:label="auth_fragment_welcome"
        tools:layout="@layout/auth_fragment_welcome" />

    <fragment
        android:id="@+id/seller_navigation_dashboard"
        android:name="com.example.el3taba.seller.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/admin_fragment_dashboard" />

    <fragment
        android:id="@+id/seller_navigation_my_products"
        android:name="com.example.el3taba.seller.myProducts.MyProductsFragment"
        android:label="@string/my_products"
        tools:layout="@layout/admin_fragment_home" />

    <fragment
        android:id="@+id/seller_navigation_add_product"
        android:name="com.example.el3taba.seller.addProduct.AddProductFragment"
        android:label="@string/add_product"
        tools:layout="@layout/admin_fragment_notifications" />

    <fragment
        android:id="@+id/seller_navigation_profile"
        android:name="com.example.el3taba.seller.profile.ProfileFragment"
        android:label="seller_fragment_profile"
        tools:layout="@layout/seller_fragment_profile" />
</navigation>