<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- Rating Stars -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/what_is_your_rate"
        android:textSize="16sp" />

    <android.widget.RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5"
        tools:rating="3.5"
        android:stepSize="0.5" />

    <!-- Review EditText -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/please_share_your_opinion_about_the_product"
        android:textSize="16sp" />

<!--    <EditText-->
<!--        android:id="@+id/review_edit_text"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@android:drawable/edit_text"-->
<!--        android:gravity="top"-->
<!--        android:hint="@string/your_review"-->
<!--        android:inputType="textMultiLine"-->
<!--        android:minHeight="100dp"-->
<!--        tools:ignore="Autofill" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/review_edit_text_layout"
        style="@style/OutlinedRoundedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="16dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/review_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/your_review"
            android:inputType="textMultiLine"
            android:minHeight="100dp"
            tools:ignore="Autofill"
            android:padding="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_review_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/auth_button"
        android:text="@string/send_review"
        android:textColor="@color/white"
        app:backgroundTint="@null" />
</LinearLayout>